--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 <h2>Personagens Principais</h2>
 <ul>
 <li>Naruto Uzumaki</li>
-
-
-
+<li>Sasuke Uchiha</li>
+<li>Sakura Haruno</li>
+<li>Kakashi Hatake</li>
 
 </ul>
 
